--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-CLIENT_GLOBAL_SETTINGS={"APIKey":"","password":"","enterToSend":false,"DarkTheme":false}
-CLIENT_SESSION_SETTINGS={"title":"","saveSession":true,"APITemperature":0.6,"continuousDialogue":true,"APIModel":"gpt-3.5-turbo"}
+CLIENT_GLOBAL_SETTINGS={"APIKey":"","password":"","enterToSend":true}
+CLIENT_SESSION_SETTINGS={"title":"","saveSession":true,"APITemperature":0.6,"continuousDialogue":true,"model":"gpt-3.5"}
 CLIENT_DEFAULT_MESSAGE='
 - [[/]] 选择预设。[[/]][[/]] 切换对话。
 - [[↑]] 编辑最近一次提问。[[Ctrl]][[Enter]] 发送。
 '
-CLIENT_MAX_INPUT_TOKENS={"gpt-3.5-turbo":4096,"gpt-4":8192,"gpt-4-32k":32768}
+CLIENT_MAX_INPUT_TOKENS={"gpt-3.5":16000,"gpt-4":32000}
 OPENAI_API_BASE_URL=api.openai.com
 OPENAI_API_KEY=
 TIMEOUT=30000
